--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -1,5 +1,6 @@
 <header>
     <a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
+    | <a href="{% url 'list-customers' %}">List of customers</a> | <a href="{% url 'customer-create' %}">Add Customer</a>
 </header>
 {% block content %}
 {% endblock content %}
