--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -1,6 +1,7 @@
 <header>
     <a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
-    | <a href="{% url 'list-customers' %}">List of customers</a> | <a href="{% url 'customer-create' %}">Add Customer</a>
+    | <a href="{% url 'customer-list' %}">List of customers</a> | <a href="{% url 'customer-create' %}">Add Customer</a> |
+    <a href="{% url 'be-create' %}">Add Ticket entry</a> | <a href= "{% url 'be-list' %}">List of Entry</a>
 </header>
 {% block content %}
 {% endblock content %}
