--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -8,4 +8,8 @@
         <p>Contact : {{ customer.contact }}</p>
         <p>Company : {{ customer.company }}</p>
 
+    <a href="{% url 'customer-update' customer.pk %}">Update</a> 
+    <br>
+    <a href="{% url 'home' %}">Return</a>
+
 {% endblock content %}
