--- a/entry/templates/entry/be_form.html
+++ b/entry/templates/entry/be_form.html
@@ -1,11 +1,13 @@
 {% extends 'customers/base.html' %}
 {% block content %}
-<h1>Add a New Post</h1>
+<h1>Add a New Ticket Entry</h1>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Save">
 </form>
+
+<a href="{% url 'home' %}">Return</a>
 
 {% endblock content %}
