--- a/entry/templates/entry/be_details.html
+++ b/entry/templates/entry/be_details.html
@@ -1,10 +1,19 @@
 {% extends 'customers/base.html' %}
 {% block content %}
+    <h1> Ticket entry Details</h1>
 
     <h2>{{ be.customers.name | upper}}</h2>
         <h3>Identifiant: CL-{{be.pk}}</h3>
         <p>Date : {{ be.date_entry | upper}}</p>
         <p>Time : {{ be.time_entry }}</p>
+
+        <h2>Ticket entry Lines</h2>
+    <ul>
+        {% for line in be.be_lines.all %}
+            <li>{{ line.type }} - Quantity: {{ line.qty }} </li>
+            <!-- Display other line details here -->
+        {% endfor %}
+    </ul>
 
     <a href="{% url 'be-update' be.pk %}">Update</a>
 
