--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -4,7 +4,7 @@
     <h2>{{ customer.name | upper}}</h2>
         <h3>Identifiant: CL-{{customer.pk}}</h3>
         <p>Name : {{ customer.name | upper}}</p>
-        <p>Address : {{ customer.address }}</p>
+        <p>Location : {{ customer.location }}</p>
         <p>Contact : {{ customer.contact }}</p>
         <p>Company : {{ customer.company }}</p>
 
