--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -1,7 +1,8 @@
 <header>
     <a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
     | <a href="{% url 'customer-list' %}">List of customers</a> | <a href="{% url 'customer-create' %}">Add Customer</a> |
-    <a href="{% url 'be-create' %}">Add Ticket entry</a> | <a href= "{% url 'be-list' %}">List of Entry</a>
+    <a href="{% url 'be-create' %}">Add Ticket entry</a> | <a href= "{% url 'be-list' %}">List of Entry</a> |
+    <a href="{% url 'invoice-list' %}">List Invoice</a>
 </header>
 {% block content %}
 {% endblock content %}
