--- a/customers/templates/customers/list_client.html
+++ b/customers/templates/customers/list_client.html
@@ -6,7 +6,7 @@
     {% for customer in customers %}
         <li>
             <a href="{% url 'customer-detail' customer.id %}">CL N°{{customer.pk|stringformat:"05d"}}</a>
-            {{ customer.name | upper}} by {{ customer.address }}
+            {{ customer.name | upper}} by {{ customer.location }}
         </li>
     {% endfor %}
 </ul>
