--- a/entry/templates/entry/be_add_lines.html
+++ b/entry/templates/entry/be_add_lines.html
@@ -6,12 +6,15 @@
   <h2>List of Items:</h2>
   <ul>
     {% for item in items %}
-      <li>{{ item }}</li>
+      <li>{{ item.qty }} {{item.type}} {{item.length}} x {{item.width}} {{item.thickness}} 
+        [{{item.owner}}]
+      </li>
     {% endfor %}
   </ul>
+  <h3>Total: {{total}} </h3>
 {% endif %}
 
-<h1>Create Ticket Entry Line</h1>
+<h1>Create or add new Line</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
