--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -5,6 +5,7 @@
     | <a href= "{% url 'be-list' %}">List of Entry</a> 
     | <a href="{% url 'invoice-list' %}">List Invoice</a> 
     | <a href="{% url 'be-create' %}">Add Ticket entry</a> 
+    | <a href="{% url 'banknote-create' %}">Create Banknote</a>
     
 </header>
 {% block content %}
