--- a/customers/templates/entry/be_details.html
+++ b/customers/templates/entry/be_details.html
@@ -23,7 +23,7 @@
         {% endfor %}
 
 
-        <li><strong>Total Quantity: {{ total_qty }} </strong></li>
+        <li><strong>{{ pcs }} pcs Equiv. to: {{ total_qty }} </strong></li>
     </ul>
 
 
