--- a/customers/templates/customers/home.html
+++ b/customers/templates/customers/home.html
@@ -5,7 +5,7 @@
 
 <div>
     <h3>Revenues</h3>
-        <h4>Cumul : {{ amount }} MGA</h4>
+        <h4>Cumul : {{ amount_ }} MGA</h4>
         <h4>This month : </h4>
         <h4>Last month : </h4>
 </div>
@@ -16,7 +16,7 @@
         <h4>This month : {{ total_sm_current_month }}</h4>
         <h4>Last month : </h4>
 </div>
-<h3>CLIENT N°: {{ client_unique_values_count }}</h3>
+<h3>TOT. CLIENT: {{ client_unique_values_count }}</h3>
 <h3>TOT. PCS: {{ sm_pcs }}</h3>
 <h3>TOT. EQV SM: {{ sm_eqv }}</h3>
 
