--- a/customers/templates/customers/home.html
+++ b/customers/templates/customers/home.html
@@ -18,7 +18,7 @@
 </div>
 <h3>TOT. CLIENT: {{ client_unique_values_count }}</h3>
 <h3>TOT. PCS: {{ sm_pcs }}</h3>
-<h3>TOT. EQV SM: {{ sm_eqv }}</h3>
+<h3>TOT. EQV SM: {{ sm_eqv |floatformat:1}}</h3>
 
 
 
