--- a/customers/templates/entry/be_form.html
+++ b/customers/templates/entry/be_form.html
@@ -1,6 +1,6 @@
 {% extends 'customers/base.html' %}
 {% block content %}
-<h1>Add a New Ticket Entry</h1>
+<h1>Create a New Ticket Entry</h1>
 
 <form method="post">
     {% csrf_token %}
