--- a/customers/templates/customers/home.html
+++ b/customers/templates/customers/home.html
@@ -12,10 +12,11 @@
 </div>
 <hr>
 <div>
-    <h3>S.M. statistics in EQV.</h3>
-        <h4>Cumul : {{ sm_eqv |floatformat:1 }} sm or {{ sm_pcs }} pcs</h4>
-        <h4>This month : {{ total_sm_current_month |floatformat:1 }}</h4>
-        <h4>Last month : </h4>
+    <h3>S.M. statistics</h3>
+        <h4>Cumul : {{ sm_eqv |floatformat:1 }} sm or {{ sm_pcs }} pcs </h4>
+        <h4>Today : {{total_sm_current_day |floatformat:1 }} </h4>
+        <h4>This month : {{ total_sm_current_month |floatformat:1 }} </h4>
+        <h4>Last month : {{ total_sm_last_month |floatformat:1 }} </h4>
 </div>
 <hr>
 <h3>TOT. CLIENT: {{ client_unique_values_count }}</h3>
@@ -30,7 +31,7 @@
 <label for="fuel"> SM progress </label>
 
 <meter id="fuel" min="0" max="100" 
-low="75" high="120" optimum="95" value={{ indicator }}>at 50/100</meter>
+low="84" high="90" optimum="95" value={{ indicator }}>at 50/100</meter>
 
 
 {% endblock content %}
