--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -1,11 +1,12 @@
 <header>
     <a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
     | <a href="{% url 'customer-create' %}">Add Customer</a>
-    | <a href="{% url 'customer-list' %}">List of customers</a> 
-    | <a href= "{% url 'be-list' %}">List of Entry</a> 
-    | <a href="{% url 'invoice-list' %}">List Invoice</a> 
-    | <a href="{% url 'be-create' %}">Create a New Ticket Entry</a> 
-    | <a href="{% url 'banknote-create' %}">Create Banknote</a>    
+    | <a href="{% url 'customer-list' %}">List of Customers</a> 
+    | <a href= "{% url 'be-list' %}">List of Ticket Entry</a> 
+    | <a href="{% url 'invoice-list' %}">List of Invoice</a> 
+    | <a href="{% url 'be-create' %}">Create Ticket Entry</a> 
+    | <a href="{% url 'banknote-create' %}">Create Banknote</a> 
+    | <a href="">Expense Entry</a>   
 </header>
 {% block content %}
 {% endblock content %}
