resolve issue for adding invoice

--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -6,7 +6,7 @@
     | <a href="{% url 'invoice-list' %}">List of Invoice</a> 
     | <a href="{% url 'be-create' %}">Create Ticket Entry</a> 
     | <a href="{% url 'banknote-create' %}">Create Banknote</a> 
-    | <a href="">Expense Entry</a>   
+    | <a href="{% url 'expense-create' %}">Expense Entry</a>   
 </header>
 {% block content %}
 {% endblock content %}
