--- a/customers/templates/customers/home.html
+++ b/customers/templates/customers/home.html
@@ -5,33 +5,34 @@
 {% now 'D d M Y H:i:s' %}
 
 <div>
-    <h3>Revenues</h3>
-        <h4>Cumul : {{ amount_ }} MGA</h4>
-        <h4>This month : MGA</h4>
-        <h4>Last month : MGA</h4>
+    <h3>Income Overview</h3>
+        <h4>Cumulative Total: {{ amount_ }} MGA</h4>
+        <h4>Current Month : MGA</h4>
+        <h4>Previous Month : MGA</h4>
 </div>
 <hr>
 <div>
     <h3>S.M. statistics</h3>
-        <h4>Cumul : {{ sm_eqv |floatformat:1 }} sm / {{ sm_pcs }} pcs </h4>
-        <h4>Today : {{total_sm_current_day |floatformat:1 }} </h4>
-        <h4>This month : {{ total_sm_current_month |floatformat:1 }} </h4>
-        <h4>Last month : {{ total_sm_last_month |floatformat:1 }} </h4>
+        <h4>Cumulative Total : {{ sm_eqv |floatformat:1 }} sm / {{ sm_pcs }} pcs </h4>
+        <h4>Daily Sales : {{total_sm_current_day |floatformat:1 }} </h4>
+        <h4>Current Month : {{ total_sm_current_month |floatformat:1 }} </h4>
+        <h4>Previous Month : {{ total_sm_last_month |floatformat:1 }} </h4>
 </div>
 <hr>
-<h3>TOT. CLIENT: {{ client_unique_values_count }}</h3>
-<h3>TOT. PCS: {{ sm_pcs }}</h3>
-<h3>TOT. EQV SM: {{ sm_eqv |floatformat:1}}</h3>
+<h3>Client Count: {{ client_unique_values_count }}</h3>
+<h3>Total Pieces: {{ sm_pcs }}</h3>
+<h3>Total SM Equivalent: {{ sm_eqv |floatformat:1}}</h3>
 <hr>
 <!-- <label>
     SM progress: <progress value={{ indicator }} max="100">70 %</progress>
 </label> -->
 
+<h3>Performance Metrics</h3>
 
-<label for="fuel"> SM progress </label>
+<label for="sm_eqv"> SM progress </label>
 
-<meter id="fuel" min="0" max="100" 
-low="84" high="90" optimum="95" value={{ indicator }}>at 50/100</meter>
+<meter id="sm_eqv" min="0" max="100" 
+low="84" high="90" optimum="95" value={{ indicator }}></meter>
 
 
 {% endblock content %}
