--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -7,6 +7,7 @@
     | <a href="{% url 'be-create' %}">Create Ticket Entry</a> 
     | <a href="{% url 'banknote-create' %}">Create Banknote</a> 
     | <a href="{% url 'expense-create' %}">Expense Entry</a>   
+    | <a href="{% url 'expense-list' %}">Expense List</a> 
 </header>
 {% block content %}
 {% endblock content %}
