add created at and updated_at

--- a/customers/templates/customers/home.html
+++ b/customers/templates/customers/home.html
@@ -20,6 +20,7 @@
 </div>
 <hr>
 <h3>Client Count: {{ client_unique_values_count }}</h3>
+<h3>This month client : {{client_unique_this_month}}</h3>
 <h3>Total Pieces: {{ sm_pcs }}</h3>
 <h3>Total SM Equivalent: {{ sm_eqv |floatformat:1}}</h3>
 <hr>
