--- a/entry/templates/entry/invoice_details.html
+++ b/entry/templates/entry/invoice_details.html
@@ -17,7 +17,7 @@
                         {{item.be_line.type}}
                         {{item.be_line.thickness}}
                         {{ item.unit_price}} MGA
-                        [{{ description }}]*
+                        [{{ item.description }}]*
                     </li> 
                 {% endfor %}
             </ul>
