--- a/customers/templates/customers/list_client.html
+++ b/customers/templates/customers/list_client.html
@@ -7,6 +7,7 @@
         <li>
             <a href="{% url 'customer-detail' customer.id %}">CL N°{{customer.pk|stringformat:"05d"}}</a>
             {{ customer.name | upper}} by {{ customer.location }}
+             <a href="{% url 'customer-update' customer.id %}">Update</a>
         </li>
     {% endfor %}
 </ul>
