--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -8,6 +8,7 @@
     | <a href="{% url 'banknote-create' %}">Create Banknote</a> 
     | <a href="{% url 'expense-create' %}">Expense Entry</a>   
     | <a href="{% url 'expense-list' %}">Expense List</a> 
+    | <a href="{% url 'price-list' %}">Pricing</a>
 </header>
 {% block content %}
 {% endblock content %}
