--- a/entry/templates/entry/invoice_details.html
+++ b/entry/templates/entry/invoice_details.html
@@ -5,7 +5,8 @@
             <h4>Inv. no. {{invoice.number}} dated on {{invoice.date}} </h4>
             <p>Total: {{invoice.total}} MGA</p>     
             <p>Total sm : {{invoice.total_sm}} MGA</p>     
-            <p>Discount : {{invoice.discount}} MGA</p>    
+            <p>Discount : {{invoice.discount}} MGA</p>   
+            <p>Metal scrap: {{invoice.metal_scrap}}</p> 
             
 
     <hr>
