--- a/entry/templates/entry/invoice_list.html
+++ b/entry/templates/entry/invoice_list.html
@@ -1,14 +1,16 @@
 {% extends 'customers/base.html' %}
 {% block content %}
-<h1>Ticket Entry List</h1>
+<h1>Invoice List</h1>
 
 <ul>
     {% for invoice in invoices %}
         
         <p> 
-        <a href="{% url 'invoice-detail' invoice.pk %}">Inv-num:{{invoice.number}}</a> Dated:{{invoice.date}} BE_Num: {{invoice.be.pk}}
-            {{invoice.be.customers.name}}
-            MS Cost {{invoice.total}} MGA
+        <a href="{% url 'invoice-detail' invoice.pk %}">Inv-num:{{ invoice.number }}</a> Dated:{{ invoice.date }} BE_Num: {{ invoice.be.pk }}
+            {{ invoice.be.customers.name }}
+            MS Cost {{ invoice.total }} MGA
+            Discount: {{ invoice.discount }}
+            Metal scrap : {{ invoice.metal_scrap }}
         </p>
 
     {% endfor %}
