--- a/customers/templates/customers/pricing.html
+++ b/customers/templates/customers/pricing.html
@@ -17,6 +17,9 @@
         text-align: center;
         padding: 8px;
     }
+    td:nth-child(n+4) {
+        color: gray; /* Met en gris les lettres à partir de la troisième colonne */
+    }
 
     th {
         background-color: #a7e6dd;
@@ -41,6 +44,7 @@
             <th> 3mm </th>
             <th> 4mm </th>
             <th> Inox</th>
+            <th> V10 </th>
         </tr>
         <tr>
             <td>Découpe</td>
@@ -50,6 +54,7 @@
             <td>1200</td>
             <td>1500</td>
             <td>+ 200 </td>
+            <td></td>
         </tr>
         <tr>
             <td>Pliage </td>
@@ -59,6 +64,7 @@
             <td>1200</td>
             <td>1500</td>
             <td>+ 200 </td>
+            <td></td>
         </tr>
         <tr>
             <td>Persienne</td>
@@ -68,6 +74,7 @@
             <td>3000</td>
             <td>5000</td>
             <td>+ 200</td>
+            <td></td>
         </tr>
         <tr>
             <td>Forme Simple</td>
@@ -77,6 +84,7 @@
             <td>8 000</td>
             <td>10 000</td>
             <td>+2 000</td>
+            <td></td>
         </tr>
         <tr>
             <td>Forme X</td>
@@ -86,6 +94,7 @@
             <td>9 000</td>
             <td>11 000</td>
             <td>+2 000</td>
+            <td></td>
         </tr>
         <tr>
             <td>Forme Diamant</td>
@@ -94,6 +103,29 @@
             <td>9 000</td>
             <td>11 000</td>
             <td>13 000</td>
+            <td>+2 000</td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Forme 45 2000 fini (promotion) </td>
+            <td>11 000</td>
+            <td>12 000</td>
+            <td>14 000</td>
+            <td>16 000</td>
+            <td>18 000</td>
+            <td>+4 000</td>
+            <td>+2 000</td>
+        </tr>
+
+        <tr>
+            <td>Forme 45 1000 fini (promotion) </td>
+            <td>6 000</td>
+            <td>7 000</td>
+            <td>9 000</td>
+            <td>11 000</td>
+            <td>13 000</td>
+            <td>+2 000</td>
             <td>+2 000</td>
         </tr>
 
@@ -104,26 +136,51 @@
             <td>6 000</td>
             <td>8 000</td>
             <td>10 000</td>
-            <td>+3 000</td>
+            <td>+1 000</td>
+            <td>+2 000</td>
+        </tr>
+
+        
+        <tr>
+            <td>Forme V 2000 fini</td>
+            <td>15 000</td>
+            <td>18 000</td>
+            <td>21 000</td>
+            <td></td>
+            <td></td>
+            <td>+4 000</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Forme V 1000 fini</td>
+            <td>12 000</td>
+            <td>14 000</td>
+            <td>17 000</td>
+            <td></td>
+            <td></td>
+            <td>+ 3000</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Forme V  500 fini</td>
+            <td> 7 000</td>
+            <td> 8 000</td>
+            <td>11 000</td>
+            <td></td>
+            <td></td>
+            <td>+2 000</td>
+            <td></td>
         </tr>
 
         <tr>
-            <td>Forme 45 1000 fini (promotion) </td>
-            <td>6 000</td>
-            <td>7 000</td>
-            <td>9 000</td>
-            <td>11 000</td>
-            <td>13 000</td>
-            <td>+3 000</td>
-        </tr>
-        <tr>
-            <td>Forme 45 2000 fini (promotion) </td>
-            <td>11 000</td>
-            <td>12 000</td>
-            <td>14 000</td>
-            <td>16 000</td>
-            <td>18 000</td>
-            <td>+3 000</td>
+            <td>Forme V  250 fini</td>
+            <td>4 000</td>
+            <td>5 000</td>
+            <td>8 000</td>
+            <td></td>
+            <td></td>
+            <td>+1 000</td>
+            <td></td>
         </tr>
 </table>
 {% endblock content %}
