--- a/customers/templates/customers/home.html
+++ b/customers/templates/customers/home.html
@@ -6,9 +6,9 @@
 
 <div>
     <h3>Income Overview</h3>
-        <h4>Cumulative Total: {{ amount_ }} MGA</h4>
-        <h4>Current Month : MGA</h4>
-        <h4>Previous Month : MGA</h4>
+        <p>Cumulative Total: {{ amount_ }} MGA</p>
+        <p>Current Month : MGA</p>
+        <p>Previous Month : MGA</p>
 </div>
 <hr>
 <div>
@@ -20,7 +20,7 @@
 </div>
 <hr>
 <h3>Client Count: {{ client_unique_values_count }}</h3>
-<h3>This month client : {{distinct_client_count}}</h3>
+<h3>This month client : {{client_unique_this_month}}</h3>
 <h3>Total Pieces: {{ sm_pcs }}</h3>
 <h3>Total SM Equivalent: {{ sm_eqv |floatformat:1}}</h3>
 <hr>
