--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -9,6 +9,8 @@
         <p>Company : {{ customer.company }}</p>
 
         <p>Last seen {{ last }} days ago</p>
+        <p>Frequency :{{frequency}}</p>
+        <p>Tot. SM eqv: {{total_sm_eqv |floatformat:1}}</p>
 
     <!-- <a href="{% url 'customer-update' customer.pk %}">Update</a>  -->
     <br>
