--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -1,17 +1,45 @@
-<header>
-    <a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
-    | <a href="{% url 'customer-create' %}">Add Customer</a>
-    | <a href="{% url 'customer-list' %}">List of Customers</a> 
-    | <a href= "{% url 'be-list' %}">List of Ticket Entry</a> 
-    | <a href="{% url 'invoice-list' %}">List of Invoice</a> 
-    | <a href="{% url 'be-create' %}">Create Ticket Entry</a> 
-    | <a href="{% url 'banknote-create' %}">Create Banknote</a> 
-    | <a href="{% url 'expense-create' %}">Expense Entry</a>   
-    | <a href="{% url 'expense-list' %}">Expense List</a> 
-    | <a href="{% url 'jirama-list' %}">List JIRAMA</a>
-    | <a href="{% url 'jirama-create' %}">Create JIRAMA</a>
-    | <a href="{% url 'list-target-client' %}">Target Client</a>
-    | <a href="{% url 'price-list' %}">Pricing</a>
-</header>
-{% block content %}
-{% endblock content %}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        /* Style the navigation bar */
+        header {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        /* Style the navigation bar links */
+        header a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        /* On hover, change the link color */
+        header a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <a href="{% url 'home' %}">Home</a>
+        <a href="{% url 'about' %}">About</a>
+        <a href="{% url 'customer-create' %}">Add Customer</a>
+        <a href="{% url 'customer-list' %}">List of Customers</a>
+        <a href="{% url 'be-list' %}">List of Ticket Entry</a>
+        <a href="{% url 'invoice-list' %}">List of Invoice</a>
+        <a href="{% url 'be-create' %}">Create Ticket Entry</a>
+        <a href="{% url 'banknote-create' %}">Create Banknote</a>
+        <a href="{% url 'expense-create' %}">Expense Entry</a>
+    </header>
+    <div class="content">
+        {% block content %}
+        {% endblock %}
+    </div>
+</body>
+</html>
