--- a/customers/templates/customers/customer_form.html
+++ b/customers/templates/customers/customer_form.html
@@ -1,12 +1,19 @@
 {% extends 'customers/base.html' %}
 {% block content %}
-<h1>Add a New Customers</h1>
+<div class="container mt-4">
+    <h1 class="mb-4"><i class="fas fa-user-plus"></i> Create a New Client </h1>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save">
-</form>
-
-<a href="{% url 'home' %}">Return</a>
-{% endblock content %}
+    <form method="post" class="needs-validation" novalidate>
+        {% csrf_token %}
+        <div class="mb-3">
+            {{ form.as_p }}
+        </div>
+        <button type="submit" class="btn btn-primary">
+            <i class="fas fa-save"></i> Save
+        </button>
+        <a href="{% url 'home' %}" class="btn btn-secondary ms-2">
+            <i class="fas fa-arrow-left"></i> Return
+        </a>
+    </form>
+</div>
+{% endblock %}
