--- a/customers/templates/customers/list_client.html
+++ b/customers/templates/customers/list_client.html
@@ -1,26 +1,37 @@
 {% extends 'customers/base.html' %}
 {% block content %}
-<h1>Customers List</h1>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Customers List</h1>
 
-<table>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Location</th>
-        <th>Update</th>
-    </tr>
-    {% for customer in customers %}
-    <tr>
-        <td> <a href="{% url 'customer-detail' customer.id %}">CL N°{{customer.pk|stringformat:"05d"}} </a></td>
-        <td> {{ customer.name | upper}} </td>
-        <td> {{ customer.location }} </td>
-        <td> <a href="{% url 'customer-update' customer.id %}">Update</a> </td>
-    </tr>
-    {% endfor %}
-</table>
+    <table class="table table-striped table-bordered">
+        <thead class="thead-light">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Location</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for customer in customers %}
+            <tr>
+                <td>
+                    <a href="{% url 'customer-detail' customer.id %}" class="text-primary">
+                        CL N°{{ customer.pk|stringformat:"05d" }}
+                    </a>
+                </td>
+                <td>{{ customer.name|upper }}</td>
+                <td>{{ customer.location }}</td>
+                <td>
+                    <a href="{% url 'customer-update' customer.id %}" class="btn btn-warning btn-sm">Update</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
-
-<a href="{% url 'home' %}">Return</a>
-
+    <div class="text-center mt-4">
+        <a href="{% url 'home' %}" class="btn btn-secondary">Return</a>
+    </div>
+</div>
 {% endblock content %}
-
