modify footer inside base.html

--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -202,7 +202,7 @@
     </div>
 
     <!-- Optional Footer -->
-    <footer>
+    <footer class="bg-dark text-white p-1 text-center">
         <p>&copy; 2024 Plitech App. All rights reserved.</p>
     </footer>
 
