adding dashboard overview

--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -22,7 +22,7 @@
             <hr>
         <div>
             {% comment %} <a href="{% url 'customer-update' customer.pk %}" class="btn btn-warning">Update Customer</a> {% endcomment %}
-            <a href="{% url 'home' %}" class="btn btn-secondary">Return to Home</a>
+            <a href="{% url 'customer-list' %}" class="btn btn-secondary">Return</a>
         </div>
         </div>
     </div>
