--- a/customers/templates/customers/base.html
+++ b/customers/templates/customers/base.html
@@ -8,9 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <!-- Font Awesome CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+    
 
     
     <style>
@@ -110,6 +115,23 @@
                         <a class="nav-link" href="{% url 'price-list' %}"><i class="fas fa-tags"></i> Pricing</a>
                     </li>
 
+                    <!-- Dashboard -->
+
+                    {% if user.is_superuser %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-tachometer-alt"></i> Dashboard
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'overview' %}"><i class="fas fa-chart-line"></i> Overview</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-users"></i> Clients</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-ban"></i> Not Available</a></li>
+                        </ul>
+                    </li>
+                    {% endif %}
+
+
                     <!-- Clients -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-users"></i> Clients</a>
@@ -196,13 +218,25 @@
     </nav>
     {% endif %}
 
+    {% if messages %}
+        <div class="container mt-3">
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+
+
     <div class="container mt-4">
         {% block content %}
         {% endblock %}
     </div>
 
     <!-- Optional Footer -->
-    <footer class="bg-dark text-white p-1 text-center">
+    <footer class="bg-dark text-white pb-0 text-center">
         <p>&copy; 2024 Plitech App. All rights reserved.</p>
     </footer>
 
