--- a/customers/templates/customers/list_client.html
+++ b/customers/templates/customers/list_client.html
@@ -1,7 +1,7 @@
 {% extends 'customers/base.html' %}
 {% block content %}
 <div class="container mt-5">
-    <h1 class="text-center mb-4">Customers List</h1>
+    <h1 class="text-center mb-4">  <i class="fas fa-users"></i> Customers List</h1>
 
     <table class="table table-striped table-bordered">
         <thead class="thead-light">
@@ -16,14 +16,23 @@
             {% for customer in customers %}
             <tr>
                 <td>
-                    <a href="{% url 'customer-detail' customer.id %}" class="text-primary">
-                        CL N°{{ customer.pk|stringformat:"05d" }}
+                    <!-- Added an icon for the customer ID -->
+                    <a href="{% url 'customer-detail' customer.id %}" class="{% if customer.contact == '0000000000' or customer.location == 'Inconnu' %}text-warning{% else %}text-primary{% endif %}">
+                        <i class="fas fa-user"></i> CL N°{{ customer.pk|stringformat:"05d" }}
                     </a>
                 </td>
-                <td>{{ customer.name|upper }}</td>
+                <td>
+                    {{ customer.title}} {{ customer.name|upper }}
+               <!-- Display the frequency (number of BEs) next to the name -->
+
+                    ({{ customer.be_count }} entries)
+                </td>
                 <td>{{ customer.location }}</td>
                 <td>
-                    <a href="{% url 'customer-update' customer.id %}" class="btn btn-warning btn-sm">Update</a>
+                    <!-- Added an icon to the update button -->
+                    <a href="{% url 'customer-update' customer.id %}" class="btn btn-warning btn-sm">
+                        <i class="fas fa-edit"></i> Update
+                    </a>
                 </td>
             </tr>
             {% endfor %}
@@ -31,7 +40,9 @@
     </table>
 
     <div class="text-center mt-4">
-        <a href="{% url 'home' %}" class="btn btn-secondary">Return</a>
+        <a href="{% url 'home' %}" class="btn btn-secondary">
+            <i class="fas fa-arrow-left"></i> Return
+        </a>
     </div>
 </div>
 {% endblock content %}
