--- a/entry/templates/entry/be_form.html
+++ b/entry/templates/entry/be_form.html
@@ -1,13 +1,42 @@
 {% extends 'customers/base.html' %}
 {% block content %}
-<h1>Create a New Ticket Entry</h1>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save">
-</form>
 
-<a href="{% url 'home' %}">Return</a>
+<h1 class="mb-4">Create a New Ticket Entry</h1>
+
+<div class="container">
+    <form method="post" class="p-4 shadow-sm bg-light rounded ">
+        {% csrf_token %}
+        
+        <div class="form-group mb-3">
+            <label for="id_date_entry">
+                <i class="fa fa-calendar-alt"></i> Entry Date
+            </label>
+            {{ form.date_entry }}
+            <small class="form-text text-muted">{{ form.date_entry.help_text }}</small>
+        </div>
+        
+        <div class="form-group mb-3">
+            <label for="id_time_entry">
+                <i class="fa fa-clock"></i> Entry Time
+            </label>
+            {{ form.time_entry }}
+            <small class="form-text text-muted">{{ form.time_entry.help_text }}</small>
+        </div>
+        
+        <div class="form-group mb-3">
+            <label for="id_customers">
+                <i class="fa fa-user"></i> Select Customer
+            </label>
+            {{ form.customers }}
+            <small class="form-text text-muted">{{ form.customers.help_text }}</small>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-20">
+            <i class="fa fa-save"></i> Save Entry
+        </button>
+        <a href="{% url 'home' %}" class="btn btn-secondary">
+            <i class="fa fa-arrow-left"></i> Return 
+        </a>
 
 {% endblock content %}
