--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -79,13 +79,13 @@
                         </div>
 
                         <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-                            <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                            <div class="text-white px-3 py-3 p-md-5 mx-md-4">
                                 <h4 class="mb-4 text-center">{% trans "Welcome to PLITECH!" %}</h4>
                                 <p class="small mb-4 text-justify">
                                     {% trans "As valued members of our metal sheet folding team, we take pride in our commitment to precision and rapidity. Together, we ensure that our clients receive the highest quality products. Let’s continue to uphold our dedication to excellence and trust as we collaborate to achieve our goals." %}
                                 </p>
-                                
-                                <h4 class="mb-4 text-center">{% trans "Bienvenue chez PLITECH!" %}</h4>
+                        
+                                <h4 class="mb-4 pt-5 text-center">{% trans "Bienvenue chez PLITECH!" %}</h4>
                                 <p class="small mb-4 text-justify">
                                     {% trans "En tant que membres précieux de notre équipe de pliage de tôles métalliques, nous sommes fiers de notre engagement envers la précision et la rapidité. Ensemble, nous veillons à ce que nos clients reçoivent des produits de la plus haute qualité. Continuons à maintenir notre dévouement à l'excellence et à la confiance alors que nous collaborons pour atteindre nos objectifs." %}
                                 </p>
